# M3u8ForTsWrite

./: README.md
app/: CMakeLists.txt  build.gradle
app/libs/: ijkplayer-java-release.aar
app/src/androidTest/java/com/wangw/github/m3u8fortswrite/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FlvDecoder.cpp  FlvDecoder.h  Log.h  TsWriteJNI.cpp  TsmuxerJNI.cpp  common.h  flv2hls.cpp  flv_mpegts.cpp  flv_mpegts.h  tswriter.cpp  tswriter.h
app/src/main/java/com/douyaim/qsapp/media/: TsMuxer.java
app/src/main/java/com/wangw/m3u8fortswrite/: CameraCaptureActivity.java  CameraUtils.java  Extinfo.java  FileWirte.java  M3u8Help.java  MainActivity.java  MainActivity2.java  MainActivity_dep.java  TSFileBuffer.java  TsFileWrite.java  TsWirte.java
app/src/main/java/com/wangw/m3u8fortswrite/opengl/: TextureMovieEncoder.java  VideoEncoderCore.java
app/src/main/java/com/wangw/m3u8fortswrite/opengl/gles/: Drawable2d.java  EglCore.java  EglSurfaceBase.java  FlatShadedProgram.java  FullFrameRect.java  GeneratedTexture.java  GlUtil.java  OffscreenSurface.java  Sprite2d.java  Texture2dProgram.java  WindowSurface.java
app/src/main/java/com/wangw/m3u8fortswrite/recod/: CameraView.java  CodecManager.java  EncoderDebugger.java  FrameCallback.java  NV21Convertor.java  Util.java  VideoRecordTask.java
app/src/main/res/layout/: activity_camera_capture.xml  activity_main.xml  activity_main2.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wangw/github/m3u8fortswrite/: ExampleUnitTest.java
mediacodecdemo/: build.gradle
(+10 files in other folders)
